--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,8 +7,18 @@ h1 {
   font-size: 70px;
   font-weight: bold;
   color: white;
+  text-align: center;
 }
 
-ul {
-  text-decoration: none;
+a {
+  font-family: Helvetica;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+}
+
+h3 {
+  font-family: Helvetica;
+  font-size: 32px;
+  font-weight: bold;
 }
