--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@ body {
 
 .title {
   background-image: url("./resources/images/the-flatiron-building.png");
+  background-color: lightblue;
 }
 
 h1 {
