--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .title {
-  background-image: url("./resources/images/the-flatiron-building.png");
+  background-image: url(./resources/images/the-flatiron-building.png);
 }
 
 h1 {
