--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,9 +31,17 @@ h3 {
   font-weight: bold;
 }
 
+h4 {
+  font-family: Helvetica;
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
+}
+
 .footer {
   font-family: Helvetica;
-  background-image: url(../images/the-flatiron-building.png);
+  font-size: 11px;
+  background-color: dimgray;
   text-align: left;
   color: white;
 }
