--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,7 +31,13 @@ h3 {
   font-weight: bold;
 }
 
-h4 {
+#wedo {
+  font-family: Helvetica;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+#bigapple {
   font-family: Helvetica;
   font-size: 23px;
   font-weight: bold;
