--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,6 +31,11 @@ h3 {
   font-weight: bold;
 }
 
+p {
+  font-family: Helvetica;
+  font-size: 14px;
+}
+
 #wedo {
   font-family: Helvetica;
   font-size: 23px;
