Tweak footer menu

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -60,3 +60,10 @@ p {
   text-align: left;
   color: white;
 }
+
+#footermenu li {
+  font-family: Helvetica;
+  font-size: 18px;
+  display: inline-block;
+  list-style: none;
+}
