--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,8 +51,8 @@ p {
   font-size: 23px;
   font-weight: bold;
   color: white;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 .footer {
