Add padding to title

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,8 @@ body {
 
 .title {
   background-image: url(../images/the-flatiron-building.png);
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 h1 {
