--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ body {
 
 .title {
   background-image: url(../images/the-flatiron-building.png);
-  padding-top: 5px;
+  background-size: cover;
 }
 
 h1 {
